SERVER-76273 Make SessionCatalogMigrationDestination's opCtxs interruptible on stepdown

(cherry picked from commit 2049bdcaf27aa5a06b8c7b3c552d7b19e303b3c5)